# jupyter-ai-agent-magics

./: .gitignore  LICENSE  README.md  TODO.md  autoregister_agent_magic.ipynb  configure.ipynb  pyproject.toml  start_here.ipynb
jupyter_ai_agent_magics/: config.py  ipynbname.py  jupyter_utils.py  llm_server.py  magics.py  model_factory.py
jupyter_ai_agent_magics/tools/: agent_tools.py  human_tools.py  jupyter_tools.py
