[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jupyter_ai_agent_magics"
version = "0.1.0"
description = "AI Agent magics for JupyterLab"
authors = [
    { name = "Aleksey Vlasenko", email = "vlasenkoalexey@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
# Pinning jupyter-nbmodel-client to old version due to
# https://github.com/datalayer/jupyter-nbmodel-client/issues/46
# In order for it to be compartible with jupyter-collaboration
# also have to pin it and jupyter_server to older versions.
dependencies = [
    "ansi2html>=1.9.2",
    "anthropic>=0.49.0",
    "anyio>=4.2.0",
    "ipywidgets>=8.1.7",
    "jupyter_client>=7.0.0",
    "jupyter_server>=2.0.1,<3",
    "jupyter-collaboration==2.1.5",
    "jupyter-kernel-client>=0.5.1",
    "jupyter-nbmodel-client==0.6.0",
    "jupyterlab_widgets>=3.0.15",
    "jupyterlab==4.2.5",
    "langchain-community>=0.3.19",
    "langchain-core>=0.3.10",
    "langchain-google-vertexai>=2.0.15",
    "langchain-google-genai",
    "langchain-openai",
    "langchain>=0.3.2",
    "langgraph>=0.5.2",
    "nbformat>=5.0.0",
    "rich",
]

[project.optional-dependencies]
dev = [
    "ipykernel"
]
test = [
    "pytest",
]

[tool.setuptools]
packages = ["jupyter_ai_agent_magics"]